<resources>
    <string name="app_name">AppName</string>
    <string name="app_tag_name">AppName</string>

    <string name="error_title">Something went wrong</string>
    <string name="hint_input_account">输入手机号</string>
    <string name="hint_input_code">输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="confirm_user_agreement">我已阅读，并同意《用户注册协议》</string>
    <string name="validation_account">验证手机</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="alertdialog_title">系统提示</string>

    <string name="file_save_to">图片已保存至:%s</string>
    <string name="save_succ">保存成功</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>
    <string name="location_must_permission">无法获取到当前位置信息将无法进行下单，请前往系统设置打开定位权限</string>
    <string name="btn_go">前往</string>
    <string name="location_must_show_permission">系统需要获取您的当前位置为您匹配最近的店铺进行下单，请点击确认进行授权</string>
    <string name="btn_sure">确认</string>
    <string name="system_dialog_title">系统提示</string>
    <string name="setting">设置</string>
    <string name="net_error">您的网络连接已断开</string>
    <string name="photo_need_permission">请前往系统设置打开相机权限</string>
    <string name="reload">重新加载</string>
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新数据中...</string>
    <string name="xlistview_header_last_time">最后更新：</string>
    <string name="xlistview_footer_hint_normal">上拉可以加载更多</string>
    <string name="xlistview_footer_hint_ready">松开立即加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多的数据...</string>
    <string name="quit_ask">再点击一次退出应用</string>
    <string name="hint_input_psw">密码</string>
    <string name="nick_hint">输入您的昵称</string>
    <string name="realname">真实姓名</string>
    <string name="idcard_num">身份证号码</string>
    <string name="idcard_hint">输入您的身份证号码</string>
    <string name="card_indate">证件有效期</string>
    <string name="indate_hint">选择您的证件有效期</string>
    <string name="hint_invite">邀请码（选填）</string>
    <string name="name_hint">输入您的真实姓名</string>
    <string name="ask_failed">请求失败</string>
    <string name="need_login_tag">needLogin</string>

</resources>
